Configured tox to run in local

--- a/tox.ini
+++ b/tox.ini
@@ -1,3 +1,36 @@
+[tox]
+envlist =
+	tests
+	typing
+	codestyle
+	build
+requires =
+	flit
+isolated_build = true
+
+[testenv]
+basepython = python3.10
+
+[testenv:tests]
+deps = pytest
+commands =  pytest tests
+
+[testenv:typing]
+deps = mypy
+skip_install = true
+commands =  mypy wordle_python
+
+[testenv:codestyle]
+deps =
+	flake8
+	flake8-docstrings
+skip_install = true
+commands =  flake8 wordle_python
+
+[testenv:code_style]
+skip_install = true
+commands =  flit build
+
 [flake8]
 max-line-length = 88
 # Don't lint venv or pycache
